[AD] Init media library for client-app

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -12,6 +12,10 @@
     scrollbar-width: none;
 }
 
+.ant-upload-list-item-card-actions {
+    display: none;
+}
+
 .ProseMirror {
     height: 300px;
     padding: 15px 25px;
