--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -16,6 +16,10 @@
     display: none;
 }
 
+.ant-upload-drag {
+    height: 150px !important;
+}
+
 .ProseMirror {
     height: 300px;
     padding: 15px 25px;
